Changed Registration to Activities
